<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="0dp">
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:background="#FFFFFF"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btn_history"
            android:layout_width="match_parent"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:text="@string/open_history"
            android:textColor="#d6d4d4"
            android:background="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">
            <Button
                android:id="@+id/btn_clean"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clean"/>
            <Button
                android:id="@+id/btn_division"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/division"/>
            <Button
                android:id="@+id/btn_multiplication"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/multiplication"/>
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/delete"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"/>
            <Button
                android:id="@+id/btn_eight"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/eight"/>
            <Button
                android:id="@+id/btn_nine"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/nine"/>
            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/puls"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four"/>
            <Button
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/five"/>
            <Button
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/six"/>
            <Button
                android:id="@+id/btn_subtraction"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/subtraction"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_one"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/one"/>
                    <Button
                        android:id="@+id/btn_two"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/two"/>
                    <Button
                        android:id="@+id/btn_three"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/three"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_zero"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/zero"/>
                    <Button
                        android:id="@+id/btn_point"
                        android:layout_weight="2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/point" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btn_equal"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/equal"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>